--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc"
+		"build": "tsc",
+		"test": "jest"
 	},
 	"keywords": ["notion", "typescript", "orm"],
 	"author": "tzilmarn <opensource@tzilmarn.com> https://tzilmarn.com",
 	"license": "AGPLv3",
 	"devDependencies": {
 		"@notionhq/client": "^2.2.1",
+		"@types/jest": "^29.2.2",
 		"@types/lodash": "^4.14.186",
+		"jest": "^29.2.2",
 		"rimraf": "^3.0.2",
+		"ts-jest": "^29.0.3",
 		"typescript": "^4.8.4"
 	},
 	"peerDependencies": {
